# FlaskProject-Template

./: .gitignore  LICENSE  MANIFEST.in  README.md  cli.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  wsgi.py
flaskproject_template/app/: __init__.py  config.py  extensions.py
flaskproject_template/app/ui/templates/: _navbar.html  base.html
flaskproject_template/app/views/: BaseView.py  RedirectView.py
flaskproject_template/blueprints/: __init__.py
flaskproject_template/blueprints/user/: __init__.py
flaskproject_template/blueprints/user/models/: UserActivityModel.py  UserModel.py  UserProfileModel.py  UserRoleModel.py
flaskproject_template/utils/: jinja2.py  sqlalchemy.py  wtforms.py
openwebpos/app/: __init__.py  config.py
openwebpos/app/ui/templates/: _navbar.html
openwebpos/app/views/: BaseView.py  DetailView.py  ListView.py  RedirectView.py  TemplateView.py  __init__.py
openwebpos/blueprints/: __init__.py
openwebpos/blueprints/ingredient/: __init__.py
openwebpos/blueprints/ingredient/forms/: CategoryForm.py  CategoryTypeForm.py
openwebpos/blueprints/ingredient/models/: IngredientCategoryModel.py  IngredientCategoryTypeModel.py  IngredientModel.py  __init__.py
openwebpos/blueprints/ingredient/views/: CategoryDetailView.py  CategoryListView.py  IngredientCategoryDetailView.py  IngredientCategoryListView.py
openwebpos/blueprints/product/: __init__.py
openwebpos/blueprints/product/forms/: IngredientCategoryForm.py  IngredientForm.py  ProductCategoryForm.py  ProductForm.py  ProductIngredientForm.py  ProductTypeForm.py  ProductVariantForm.py
openwebpos/blueprints/product/models/: IngredientCategoryModel.py  IngredientModel.py  ProductCategoryModel.py  ProductIngredientModel.py  ProductModel.py  ProductTypeModel.py  ProductVariantModel.py  __init__.py
openwebpos/blueprints/product/views/: IngredientCategoryDetailView.py  IngredientCategoryListView.py  ProductCategoryDetailView.py  ProductCategoryListView.py  ProductIngredientDetailView.py  ProductTypeListView.py  ProductVariantDetailView.py
openwebpos/blueprints/user/: decorators.py
openwebpos/blueprints/user/models/: UserActivityModel.py  UserModel.py  UserProfileModel.py  UserRoleModel.py
openwebpos/utils/: __init__.py  flask.py  htmx.py  money.py  sqlalchemy.py
(+36 files in other folders)
